--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="div1">
         <!-- <div class="h1">REGISTER YOUR TEAM FOR CREW CHALLENGE</div> -->
-        <form>
+        <form action="mailto:naveendas8900@gmail.com" method="post" enctype="text/plain">
             <fieldset>
                 <legend><em>Register Your Team</em></legend>
 
@@ -46,7 +46,7 @@
                     <img src="portfolio.jpg" alt="">
                 </div>
 
-                <input type="button" value="Submit" id="send">
+                <input type="submit" value="Submit" id="send">
                 <input type="reset" value="Reset">
             </fieldset>
         </form>
