--- a/index.html
+++ b/index.html
@@ -12,31 +12,30 @@
 <body>
 
     <div class="div1">
-        <!-- <div class="h1">REGISTER YOUR TEAM FOR CREW CHALLENGE</div> -->
+        
         <form action="mailto:naveendas8900@gmail.com" method="post" enctype="text/plain">
             <fieldset>
                 <legend><em>Register Your Team</em></legend>
 
 
-                <input type="text" id="team" name="" class="input" required placeholder="Your Team Name"><br><br>
+                <input type="text" name="team" class="input" required placeholder="Your Team Name"><br><br>
 
-                <input type="text" id="member1" name="" class="input" required
+                <input type="text" name="player1" class="input" required
                     placeholder="1st Player Name & ID (Team Leader)"><br><br>
 
-                <input type="text" id="member2" name="" class="input" required
+                <input type="text" name="player2" class="input" required
                     placeholder="2nd Player Name & ID"><br><br>
 
-                <input type="text" id="member3" name="" class="input" required
+                <input type="text" name="player3" class="input" required
                     placeholder="3rd Player Name & ID"><br><br>
 
-                <input type="text" id="member4" name="" class="input" required
+                <input type="text" name="player4" class="input" required
                     placeholder="4th Player Name & ID"><br><br>
 
-                <input type="email" id="email" name="" class="input" required
+                <input type="email" name="mail" class="input" required
                     placeholder="Email Address (Team Leader)"><br><br>
 
-                <!-- <label for="phone">Mobile no.</label><br> -->
-                <input type="tel" id="phone" name="" class="input" required
+                <input type="tel" name="phone" class="input" required
                     placeholder="Phone Number (Team Leader)"><br><br>
 
                 <div>
@@ -46,7 +45,7 @@
                     <img src="portfolio.jpg" alt="">
                 </div>
 
-                <input type="submit" value="Submit" id="send">
+                <input type="submit" value="Send">
                 <input type="reset" value="Reset">
             </fieldset>
         </form>
