--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="CREW.png" type="image/x-icon">
     <title>crew-challenge-form</title>
 </head>
 
@@ -13,7 +14,7 @@
 
     <div class="div1">
         
-        <form action="mailto:naveendas8900@gmail.com" method="post" enctype="text/plain">
+        <form>
             <fieldset>
                 <legend><em>Register Your Team</em></legend>
 
